--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,9 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        vectorDrawables {
+            useSupportLibrary true
+        }
     }
 
     buildTypes {
@@ -37,11 +40,20 @@ android {
     }
     buildFeatures {
         viewBinding = true
+        compose true
     }
 
     // Allow references to generated code
     kapt {
         correctErrorTypes = true
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion '1.3.1'
+    }
+    packagingOptions {
+        resources {
+            excludes += '/META-INF/{AL2.0,LGPL2.1}'
+        }
     }
 }
 
@@ -52,9 +64,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
-
-
-
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
     implementation("androidx.activity:activity-ktx:1.6.0")
@@ -62,11 +71,16 @@ dependencies {
     // Kotlin
     implementation("androidx.navigation:navigation-fragment-ktx:2.5.2")
     implementation("androidx.navigation:navigation-ui-ktx:2.5.2")
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
     androidTestImplementation("androidx.navigation:navigation-testing:2.5.2")
 
     implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2")
 
     implementation "com.google.dagger:hilt-android:2.42"
+    kapt ("com.google.dagger:hilt-compiler:2.42")
+    implementation ("androidx.hilt:hilt-navigation-compose:1.0.0")
+
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     kapt "com.google.dagger:hilt-compiler:2.42"
 
     //Room
@@ -78,4 +92,24 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    /*-----------------compose------------------------*/
+
+    implementation("androidx.compose.material3:material3:1.0.0-beta03")
+    implementation("androidx.compose.material:material-icons-extended:1.2.1")
+
+    def nav_version = "2.5.2"
+    implementation("androidx.navigation:navigation-compose:$nav_version")
+
+    implementation("androidx.activity:activity-compose:1.6.0")
+    implementation("androidx.compose.ui:ui:1.2.1")
+    implementation("androidx.compose.ui:ui-tooling-preview:1.2.1")
+    implementation ("androidx.constraintlayout:constraintlayout-compose:1.1.0-alpha04")
+    implementation("io.coil-kt:coil-compose:2.1.0")
+
+    implementation 'androidx.compose.runtime:runtime-livedata:1.3.0-beta03'
+
+    debugImplementation("androidx.compose.ui:ui-tooling:1.2.1")
+    debugImplementation("androidx.compose.ui:ui-test-manifest:1.2.1")
+
 }
